# neat

./: .gitignore  README.md  automation_ops.md  pyproject.toml
instance/: neat.sqlite
neat/: __init__.py
neat/conf/: celery_config.py  config.py  neat.yaml  server.yaml
neat/resource/: schema.sql
neat/script/: test.sh  test1.sh  test12.sh
neat/src/: celeryApp.py  sshclient.py  sshclientTask.py  startup.py  tasks.py  test.py
neat/src/app/: __init__.py  db.py  form.py  moudles.py  portal.py  test.py
neat/src/app/resource/: schema.sql
neat/src/app/tasks/echo/: startup.sh
neat/src/app/tasks/echo/env/: echo.yaml
neat/src/app/templates/: _formhelpers.html  base.html  create_task.html  index.html
neat/src/app/validate/: form.py
neat/src/common/: moudles.py
neat/src/service/: __init__.py  celeryApp.py  sshclient.py  sshclientTask.py  startup.py  tasks.py  test.py
neat/templates/: create_task.html  index.html  neat.js  task_result.html
neat/tests/: test_demo.py
